--- a/drch/package.json
+++ b/drch/package.json
@@ -4,17 +4,22 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "dev:both": "concurrently \"cd .. && uvicorn main:app --reload\" \"npm run dev\"",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "concurrently": "^9.0.1",
+    "next": "14.2.15",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.15"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
+  },
+  "engines": {
+    "node": "20.18.0"
   }
 }
