--- a/drch/package.json
+++ b/drch/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "lucide-react": "^0.454.0",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18"
